<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="cn.yoogr.clover.mvp.ui.activity.UpdateUserActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:padding="@dimen/margin">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_back"
            />

        <ImageView
            android:id="@+id/ivYes"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?selectableItemBackgroundBorderless"
            android:src="@drawable/ic_yes" />
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/cvAvatar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"

        android:src="@drawable/ic_user_default" />
    <LinearLayout
        android:id="@+id/llOpenDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="?android:selectableItemBackground"
        android:orientation="vertical"
        android:paddingBottom="5dp"
        android:paddingLeft="20dp"
        android:paddingTop="5dp">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/birthday"
            android:textSize="@dimen/text_size_14sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_14sp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:textColor="@android:color/white"
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:maxLength="20"
            android:singleLine="true"
            android:textSize="@dimen/text_size_14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp">

        <EditText
            android:textColor="@android:color/white"
            android:id="@+id/edNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nickname"
            android:maxLength="120"
            android:singleLine="true"
            android:textSize="@dimen/text_size_14sp" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>
