<?xml version="1.0" encoding="utf-8"?>
<cn.yoogr.clover.widget.SpringScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
    <!--Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="280dp">

            <ImageView
                android:id="@+id/ivHeaderImage"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="centerCrop" />

            <include
                layout="@layout/layout_space_count"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/cvAvatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="40dp"
                android:transitionName="PHOTO"
                app:civ_border_color="@android:color/white"
                app:civ_border_width="2dp" />

        </FrameLayout>


        <!--name-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvName"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/ivEdit"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="?selectableItemBackgroundBorderless"
                android:src="@mipmap/ic_edit_user" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_download_layout"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_like1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/like"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>

            <!--历史记录-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/bg_history_layout"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_history" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/history"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_12sp" />
            </LinearLayout>
        </LinearLayout>

       <cn.yoogr.clover.widget.SettingItemView
           android:id="@+id/feedback"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"/>
        <cn.yoogr.clover.widget.SettingItemView
            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <cn.yoogr.clover.widget.SettingItemView
            android:id="@+id/setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <cn.yoogr.clover.widget.SettingItemView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>





        <Button
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_logout"
            android:text="@string/out_login"
            android:textColor="@android:color/white" />

    </LinearLayout>

</cn.yoogr.clover.widget.SpringScrollView>
